<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profil_tio"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Tio Fani"
        android:textColor="@color/design_default_color_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Mahasiswa IT Telkom Purwokerto"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        />



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_media"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:padding="2dp"
                android:layout_marginLeft="8dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/icon_github"
                    android:padding="4dp" />

                <TextView
                    style="@style/desc_text"
                    android:text="tiofani"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="4dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/icon_instagram"
                    android:padding="4dp" />

                <TextView
                    style="@style/desc_text"
                    android:text="tio.fani"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="4dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginBottom="32dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical"
            >

            <TextView
                style="@style/title_text"
                android:text="@string/address"
                />

            <TextView
                style="@style/desc_text"
                android:layout_marginLeft="8dp"
                android:text="@string/my_address"/>

            <TextView
                android:layout_marginTop="16dp"
                style="@style/title_text"
                android:text="@string/hobby"
                />

            <TextView
                style="@style/desc_text"
                android:layout_marginLeft="8dp"
                android:text="@string/my_hobby"/>

            <TextView
                android:layout_marginTop="16dp"
                style="@style/title_text"
                android:text="@string/quotes"
                />

            <TextView
                style="@style/desc_text"
                android:layout_marginLeft="8dp"
                android:text="@string/my_quotes"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>